2006-07-03  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-ldap.docs, debian/dbmail-sieve.docs:
	add more docs to debian packages
	* debian/dbmail.docs:
	update
	* pool.c, server.c, serverchild.c:
	rework the preforking code after doing some serious stress tests
	(bug #361)

2006-06-24  Paul J Stevens <paul@nfg.nl>

	* pool.c, server.c:
	accepted patch from ryo (closes: #370)
	* pool.c:
	revert previous failed fix on reap_child
	* dm_imaputil.c:
	try to fix broken gmime parsing of some addresses
	* imapcommands.c:
	minor cleanup in _ic_authenticate
	* dbmail-imapsession.c:
	remove redundant error checking on g_new0 calls
	* modules/authldap.c, server.c:
	misc cleanups

2006-06-21  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c, modules/dbsqlite.c, sql/sqlite/create_tables.sqlite:
	sqlite now passes all the unit-tests (with some help from Geo)

2006-06-20  Paul J Stevens <paul@nfg.nl>

	* sql/sqlite/create_tables.sqlite:
	finished create_tables.sqlite
	* debian/control:
	relax build-deps on debhelper version a little
	* acinclude.m4, modules/dbsqlite.c:
	shift to sqlite3 api

2006-06-18  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, modules/authldap.c, modules/authsql.c:
	rebind after authentication in ldap (bug #367). Added
	db.c,db_user_log_login to add logging of last login in ldap as well
	* check_dbmail_deliver.c, dbmail-message.c, misc.c, misc.h:
	added misc.c,dm_strnesc which provides correct trunctation of sql-escaped
	strings

2006-06-17  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	add string escaping to query constructors in search code

2006-06-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c, 
	  dbmail-message.h, imapcommands.c:
	avoid duplicate insertion of headername/headervalue pairs (bug #282)

2006-06-14  Aaron Stone  <aaron@serendipity.cx>

	* contrib/dbmail-removeversion.patch, contrib/dbmail.spec,
	contrib/startup-scripts/redhat/: