@@ -1,3 +1,8 @@
+2006-07-12  Paul J Stevens <paul@nfg.nl>
+
+	* dbmail-mailbox.c:
+	make headersearches case insensitive
+
 2006-07-03  Paul J Stevens <paul@nfg.nl>
 
 	* debian/dbmail-ldap.docs, debian/dbmail-sieve.docs:
